--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/animate.min.css">
 </head>
 
-<body>
+<body onload="init();">
     <section class="section">
         <div class="columns">
             <div class="column is-one-fifth">
@@ -27,8 +27,10 @@
                 </div>
             </div>
             <div class="column">
-                <h1 class="title is-2">Motor Tuner</h1>
-                <canvas id="myChart"></canvas>
+                <!-- <h1 class="title is-2">Motor Tuner</h1> -->
+                <!-- <canvas id="myChart"></canvas> -->
+                <h1 class="title is-2">Field Position System</h1>
+                <canvas id="field"></canvas>
             </div>
             <div class="column">
                 <h1 class="title is-2">Camera</h1>
